# cfpmm

./: .cproject  .project  CFPMM.Doxyfile  CMakeLists.txt  README.md
instances/: README  instance1.txt  instance10.txt  instance11.txt  instance2.txt  instance200.txt  instance21.txt  instance3.txt  instance31.txt  instance4.txt  instance41.txt  instance5.txt  instance51.txt  instance6.txt  instance7.txt  instance8.txt  instance800.txt  instance9.txt
results/: exact_results.csv  heuristic_results.csv  heuristic_results_after10.csv  heuristic_results_sparcity200.csv  heuristic_results_sparcity800.csv  results.csv  test_sparcity.csv
src/: Ant.cpp  Ant.h  CFPMM.cpp  Cartesian.h  Colony.cpp  Colony.h  Debug.h  Exact.cpp  Exact.h  Instance.cpp  Instance.h  InstanceGenerator.cpp  InstanceGenerator.h  InstanceUtils.cpp  InstanceUtils.h  Item.h  Solution.cpp  Solution.h  Utils.h  cartesian.cpp  flags.h  main.cpp
